--- a/mutalyzer/website/templates/name-checker.html
+++ b/mutalyzer/website/templates/name-checker.html
@@ -132,21 +132,36 @@
         {% endif %}
 
         {% if descriptions %}
-          <h4>Affected transcripts</h4>
-          {% for i in descriptions %}
-            {% if i.endswith('?') %}
-              <p><code>{{ i }}</code></p>
-            {% else %}
-              <p><code><a href="{{ url_for('.name_checker', description=i, standalone=standalone|int or None) }}">{{ i }}</a></code></p>
-            {% endif %}
-          {% endfor %}
+          <h4>
+            <a data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            Affected transcripts
+            </a>
+          </h4>
+          <div class="collapse" id="collapseExample">
+            <div class="well">
+              {% for i in descriptions %}
+                {% if i.endswith('?') %}
+                  <p><code>{{ i }}</code></p>
+                {% else %}
+                  <p><code><a href="{{ url_for('.name_checker', description=i, standalone=standalone|int or None) }}">{{ i }}</a></code></p>
+                {% endif %}
+              {% endfor %}
+            </div>
+          </div>
         {% endif %}
-
         {% if protDescriptions %}
-          <h4>Affected proteins</h4>
-          {% for i in protDescriptions %}
-            <p><code>{{ i }}</code></p>
-          {% endfor %}
+          <h4>
+            <a data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            Affected proteins
+            </a>
+          </h4>
+          <div class="collapse" id="collapseExample">
+            <div class="well">
+            {% for i in protDescriptions %}
+              <p><code>{{ i }}</code></p>
+            {% endfor %}
+            </div>
+          </div>
         {% endif %}
 
         {% if transcriptInfo %}
