--- a/mutalyzer/website/templates/name-checker.html
+++ b/mutalyzer/website/templates/name-checker.html
@@ -133,11 +133,11 @@
 
         {% if descriptions %}
           <h4>
-            <a data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            <a data-toggle="collapse" href="#collapseTranscripts" aria-expanded="false" aria-controls="collapseTranscripts">
             Affected transcripts
             </a>
           </h4>
-          <div class="collapse" id="collapseExample">
+          <div class="collapse" id="collapseTranscripts">
             <div class="well">
               {% for i in descriptions %}
                 {% if i.endswith('?') %}
@@ -151,11 +151,11 @@
         {% endif %}
         {% if protDescriptions %}
           <h4>
-            <a data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            <a data-toggle="collapse" href="#collapseProteins" aria-expanded="false" aria-controls="collapseProteins">
             Affected proteins
             </a>
           </h4>
-          <div class="collapse" id="collapseExample">
+          <div class="collapse" id="collapseProteins">
             <div class="well">
             {% for i in protDescriptions %}
               <p><code>{{ i }}</code></p>
@@ -300,27 +300,35 @@
       <div class="col-md-12">
         <hr />
         {% if legends %}
-          <h4>Legend</h4>
-          <table class="table table3">
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>ID</th>
-                <th>Locus tag</th>
-                <th>Product</th>
-                <th>Link method</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for i in legends %}
-                <tr>
-                  {% for j in i %}
-                    <td>{{ j if j else '' }}</td>
+          <h4>
+            <a data-toggle="collapse" href="#collapseLegend" aria-expanded="false" aria-controls="collapseLegend">
+              Legend
+            </a>
+          </h4>
+          <div class="collapse" id="collapseLegend">
+            <div class="well">
+              <table class="table table3">
+                <thead>
+                  <tr>
+                    <th>Name</th>
+                    <th>ID</th>
+                    <th>Locus tag</th>
+                    <th>Product</th>
+                    <th>Link method</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for i in legends %}
+                    <tr>
+                      {% for j in i %}
+                        <td>{{ j if j else '' }}</td>
+                      {% endfor %}
+                    </tr>
                   {% endfor %}
-                </tr>
-              {% endfor %}
-            </tbody>
-          </table>
+                </tbody>
+              </table>
+            </div>
+          </div>
         {% endif %}
       </div>
     </div>
